--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
-  text-align: center;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.lorem {
+  width: 619px;
+  height: 283px;
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ipsum {
+  width: 619px;
+  height: 392px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.lorem,
+.ipsum {
+  line-height: 21.09px;
+  padding: 20px;
+  background-color: #c4c4c4;
 }
 
-.App-link {
-  color: #61dafb;
+.App h1 {
+  font-size: 30px;
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App p {
+  font-size: 18px;
 }
